clean up aws multi cpi guide
Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -143,6 +143,12 @@ See [Recent Additions and Updates](recent.html).
 * Debugging issues with jobs
 
 ---
+## <a id="guides"></a> Guides
+
+* Multi-CPI
+  * [On AWS](guide-multi-cpi-aws.html)
+
+---
 ## <a id="release"></a> Package software with BOSH
 
 * What is a release?
@@ -174,12 +180,6 @@ See [Recent Additions and Updates](recent.html).
 * Managing release repository
     * [Release blobstore](release-blobstore.html)
         * [Configuring S3 release blobstore](s3-release-blobstore.html)
-
----
-## <a id="guides"></a> Guides
-
-* Multi-CPI
-  * [On AWS](multi-cpi-aws.html)
 
 ---
 ## <a id="extend"></a> Extend BOSH
