Fix "availability" typo

--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -2,7 +2,7 @@
 title: Terminology
 ---
 
-## <a id="az"></a> AZ or Availaibility Zone
+## <a id="az"></a> AZ or Availability Zone
 
 An availability zone represents a separated set of cloud resources (typically compute, networking and storage) such that failures in one AZ cause minimal impact in a different AZ. [See usage details](azs.html).
 
