--- a/cpi-config.html.md.erb
+++ b/cpi-config.html.md.erb
@@ -35,40 +35,6 @@ cpis:
 Once CPI config is updated AZs in the cloud config can reference specific CPI to be used during a deploy. Unlike runtime and cloud configs, CPI config is not tracked directly by the deployments and can be updated separately (useful for updating CPI credentials without forcing redeploy of all the deployments).
 
 ---
-## <a id='example'></a> Example
-
-Example of a CPI config referencing two separate OpenStack installations:
-
-```yaml
-cpis:
-- name: openstack-1a
-  type: openstack
-  properties:
-    api_key: ...
-    auth_url: ...
-- name: openstack-1b
-  type: openstack
-  properties:
-    api_key: ...
-    auth_url: ...
-```
-
-AZs in cloud config can reference CPIs by their given names:
-
-```yaml
-azs:
-- name: z1
-  cpi: openstack-1a
-  cloud_properties:
-    availability_zone: us-east-1a
-- name: z2
-  cpi: openstack-1b
-  cloud_properties:
-    availability_zone: us-east-1b
-...
-```
-
----
 ## <a id='cpis'></a> CPIs Block
 
 **cpis** [Array, required]: Specifies the CPIs.
@@ -95,4 +61,108 @@ cpis:
     default_key_name: ((default_key_name))
     default_security_groups: ((default_security_groups))
     human_readable_vm_names: true
+```
+
+VSphere example:
+
+```yaml
+cpis:
+- name: ((vcenter_identifier))
+  type: vsphere
+  properties:
+    host: ((vcenter_ip))
+    user: ((vcenter_user))
+    password: ((vcenter_password))
+    datacenters:
+    - clusters:
+      - { ((vcenter_cluster)): {}}
+      datastore_pattern: ((vcenter_datastores_pattern))
+      disk_path: ((folder_to_put_disks_in))
+      name: ((vcenter_datacenter))
+      persistent_datastore_pattern: ((vcenter_persistent_datastores_pattern))
+      template_folder: ((folder_to_put_templates_in))
+      vm_folder: ((folder_to_put_vms_in))
+```
+
+For VSphere, if your datacenter and cluster names have spaces in them, there is no need to put quotes around them when updating your cpi-config.
+
+---
+## <a id='example'></a> Example
+
+Example of a CPI config referencing two separate OpenStack installations:
+
+```yaml
+cpis:
+- name: openstack-1a
+  type: openstack
+  properties:
+    api_key: ...
+    auth_url: ...
+- name: openstack-1b
+  type: openstack
+  properties:
+    api_key: ...
+    auth_url: ...
+```
+
+AZs in cloud config can reference openstack CPIs by their given names:
+
+```yaml
+azs:
+- name: z1
+  cpi: openstack-1a
+  cloud_properties:
+    availability_zone: us-east-1a
+- name: z2
+  cpi: openstack-1b
+  cloud_properties:
+    availability_zone: us-east-1b
+...
+```
+
+Example of a CPI config referencing two separate VSphere installations:
+
+```yaml
+cpis:
+- name: vcenter-1a
+  type: vsphere
+  properties:
+    host: vcenter-1a-ip
+    user: vcenter-1a-user
+    password: vcenter-1a-password
+    datacenters:
+    - clusters:
+      - {vcenter-1a-cluster: {}}
+      datastore_pattern: ^(lun01|lun02|lun03|lun04|lun05)$
+      disk_path: vcenter-1a-disks/disks
+      name: vcenter-1a-datacenter
+      persistent_datastore_pattern: ^(lun01|lun02|lun03|lun04|lun05)$
+      template_folder: vcenter-1a-disks/templates
+      vm_folder: vcenter-1a-disks/vms
+- name: vcenter-1b
+  type: vsphere
+  properties:
+    host: vcenter-1b-ip
+    user: vcenter-1b-user
+    password: vcenter-1b-password
+    datacenters:
+    - clusters:
+      - {vcenter-1b-cluster: {}}
+      datastore_pattern: ^(lun01|lun02|lun03|lun04|lun05)$
+      disk_path: vcenter-1b-disks/disks
+      name: vcenter-1b-datacenter
+      persistent_datastore_pattern: ^(lun01|lun02|lun03|lun04|lun05)$
+      template_folder: vcenter-1b-disks/templates
+      vm_folder: vcenter-1b-disks/vms
+```
+
+AZs in cloud config can reference VSphere CPIs by their given names:
+
+```yaml
+azs:
+- name: z1
+  cpi: vcenter-1a
+- name: z2
+  cpi: vcenter-1b
+...
 ```
