max_in_flight can be set as percentage

--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -219,7 +219,7 @@ compilation:
 **update** [Hash, required]: This specifies instance update properties. These properties control how BOSH updates job instances during the deployment.
 
 * **canaries** [Integer, required]: The number of [canary](./terminology.html#canary) instances.
-* **max\_in\_flight** [Integer, required]: The maximum number of non-canary instances to update in parallel.
+* **max\_in\_flight** [Integer or Percentage, required]: The maximum number of non-canary instances to update in parallel.
 * **canary\_watch\_time** [Integer or Range, required]
     * If the `canary_watch_time` is an integer, the Director sleeps for that many milliseconds, then checks whether the canary instances are healthy.
     * If the `canary_watch_time` is a range (low-high), the Director:
