Fix grammar in stemcell terminology

--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -215,7 +215,7 @@ The runtime config is a YAML file that defines global configuration used by the 
 ---
 ## <a id="stemcell"></a> Stemcell
 
-A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. See [What is a Stemcell?](stemcell.html).
+A generic VM image that BOSH clones and configures during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. See [What is a Stemcell?](stemcell.html).
 
 ---
 ## <a id="team"></a> Team
