--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -79,14 +79,15 @@ See [Recent Additions and Updates](recent.html).
 
 ### <a id="deployment-config"></a> Detailed deployment configuration
 
-* [Cloud config](cloud-config.html)
-    * [AZs](azs.html)
-    * [Networks](networks.html)
-    * [VM anti-affinity](vm-anti-affinity.html)
-* [Runtime config](runtime-config.html)
-    * [Addons](runtime-config.html#addons)
-    * [Common addons](addons-common.html)
-* [CPI config](cpi-config.html)
+* [Generic config](generic-config.html)
+  * [Cloud config](cloud-config.html)
+      * [AZs](azs.html)
+      * [Networks](networks.html)
+      * [VM anti-affinity](vm-anti-affinity.html)
+  * [Runtime config](runtime-config.html)
+      * [Addons](runtime-config.html#addons)
+      * [Common addons](addons-common.html)
+  * [CPI config](cpi-config.html)
 * [Trusted certificates](trusted-certs.html)
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
