Add CPI API v1 `info` endpoint documentation
[#152610829](https://www.pivotaltracker.com/story/show/152610829)

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -26,6 +26,21 @@ resource_pools:
 ```
 
 ---
+## <a id="cpi-info"></a> CPI Info
+
+### <a id="info"></a> `info`
+
+Returns information about the CPI to help the Director to make decisions on which CPI to call for certain operations in a multi CPI scenario.
+
+#### Arguments
+
+No arguments
+
+#### Returned
+
+- **stemcell_formats** [Array of strings]: Stemcell formats supported by the CPI. Currently used in combination with `create_stemcell` by the Director to determine which CPI to call when uploading a stemcell.
+
+---
 ## <a id="stemcells"></a> Stemcell management
 
 ### <a id="create-stemcell"></a> `create_stemcell`
