update configs docs

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -79,7 +79,14 @@ See [Recent Additions and Updates](recent.html).
 
 ### <a id="deployment-config"></a> Detailed deployment configuration
 
-* [Generic config](generic-config.html)
+* [Manifest v2 schema](manifest-v2.html)
+    * [Links](links.html)
+    * [Link properties](links-properties.html)
+    * [Manual linking](links-manual.html)
+    * [Renaming/migrating instance groups](migrated-from.html)
+* [Persistent and orphaned disks](persistent-disks.html)
+    * [Customizing persistent disk FS](persistent-disk-fs.html)
+* [Configs](configs.html)
   * [Cloud config](cloud-config.html)
       * [AZs](azs.html)
       * [Networks](networks.html)
@@ -89,13 +96,6 @@ See [Recent Additions and Updates](recent.html).
       * [Common addons](addons-common.html)
   * [CPI config](cpi-config.html)
 * [Trusted certificates](trusted-certs.html)
-* [Manifest v2 schema](manifest-v2.html)
-    * [Links](links.html)
-    * [Link properties](links-properties.html)
-    * [Manual linking](links-manual.html)
-    * [Renaming/migrating instance groups](migrated-from.html)
-* [Persistent and orphaned disks](persistent-disks.html)
-    * [Customizing persistent disk FS](persistent-disk-fs.html)
 * [Native DNS Support](dns.html) [alpha]
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
