--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -445,11 +445,30 @@ See [Uploading Releases](uploading-releases.html).
     </pre>
 
 ---
-### <a id="generic-config-mgmt"></a> Generic config
+### <a id="configs-mgmt"></a> Configs
 
-See [Generic config](generic-config.html).
+See [Configs](configs.html).
 
-- <a id="generic-config"></a> `bosh -e my-env config [--name=] my-type`
+- <a id="configs"></a> `bosh -e my-env configs [--type=my-type] [--name=my-name]`
+
+    Lists all the configs on the Director.
+
+    <pre class="terminal">
+    $ bosh -e my-env configs
+    Using environment '192.168.50.6' as client 'admin'
+
+    Type     Name
+    cloud    default
+    ~        custom-vm-types
+    cpi      default
+    runtime  default
+
+    3 configs
+
+    Succeeded
+    </pre>
+
+- <a id="config"></a> `bosh -e my-env config my-type [--name=my-name]`
 
     Show default `my-type` config on the Director.
 
@@ -457,7 +476,7 @@ See [Generic config](generic-config.html).
     $ bosh -e my-env config my-type config.yml
     </pre>
 
-- <a id="update-config"></a> `bosh -e my-env update-config [--name=] my-type config.yml`
+- <a id="update-config"></a> `bosh -e my-env update-config my-type config.yml [--name=my-name]`
 
     Update default `my-type` config on the Director.
 
@@ -465,30 +484,12 @@ See [Generic config](generic-config.html).
     $ bosh -e my-env update-config my-type config.yml
     </pre>
 
-- <a id="delete-config"></a> `bosh -e my-env delete-config [--name=] my-type`
+- <a id="delete-config"></a> `bosh -e my-env delete-config my-type [--name=my-name]`
 
     Delete default `my-type` config on the Director.
 
     <pre class="terminal">
     $ bosh -e my-env delete-config my-config-type
-    </pre>
-
-- <a id="list-configs"></a> `bosh -e my-env configs [--type=] [--name=]`
-
-    Lists all the configs on the Director.
-
-    <pre class="terminal">
-    $ bosh -e my-env configs
-    Using environment '192.168.50.6' as client 'admin'
-    
-    Type     Name
-    cloud    default
-    cpi      default
-    runtime  default
-    
-    3 configs
-    
-    Succeeded
     </pre>
 
 ---
