Fix incorrect link

--- a/cli-int.html.md.erb
+++ b/cli-int.html.md.erb
@@ -79,7 +79,7 @@ CLI allows to provide variable values via usage of one or more of the following 
     s3_access_secret_key: some-secret
     </pre>
 
-Here is a more realistic example of using base YAML document (`bosh.yml`) from [cloudfoundry/bosh-deployment repo](https://github.com/cloudfoundry/bosh) and specifying several variables and operations files to provide necessary missing values:
+Here is a more realistic example of using base YAML document (`bosh.yml`) from [cloudfoundry/bosh-deployment repo](https://github.com/cloudfoundry/bosh-deployment) and specifying several variables and operations files to provide necessary missing values:
 
 <pre class="terminal">
 $ bosh create-env ~/workspace/bosh-deployment/bosh.yml \
