Add document for Azure availability zone

--- a/azs.html.md.erb
+++ b/azs.html.md.erb
@@ -38,6 +38,7 @@ AZs schema:
 ### <a id='azs-cloud-properties'></a> CPI Specific `cloud_properties`
 
 - [See AWS CPI AZ cloud properties](aws-cpi.html#azs)
+- [See Azure CPI AZ cloud properties](azure-cpi.html#azs)
 - [See OpenStack CPI AZ cloud properties](openstack-cpi.html#azs)
 - [See Softlayer CPI AZ cloud properties](softlayer-cpi.html#azs)
 - [See Google Cloud Platform CPI AZ cloud properties](google-cpi.html#azs)
