deployment.html: Fix grammar and spelling mistakes

--- a/deployment.html.md.erb
+++ b/deployment.html.md.erb
@@ -8,7 +8,7 @@ The deployment process begins with deciding which Operating System images (stemc
 
 When a deployment manifest is uploaded to the Director, requested resources are allocated and stored. These resources form a deployment. The deployment keeps track of associated VMs and persistent disks that are attached to the VMs. Over time, as the deployment manifest changes, VMs are replaced and updated. However, persistent disks are retained and are re-attached to the newer VMs.
 
-A user can manage a deployment via its deployment manifest. A deployment manifest contains all needed information for tracking, managing, and updating software on the deployment's VMs. It describes the deployment in an IaaS-agnostic way. For example, to update a Zookeeper cluster (deployment is named 'zookeper') to a later version of a Zookeeper release, one would update few lines in the deployment manifest.
+A user can manage a deployment via its deployment manifest. A deployment manifest contains all needed information for tracking, managing, and updating software on the deployment's VMs. It describes the deployment in an IaaS-agnostic way. For example, to update a Zookeeper cluster (deployment is named 'zookeeper') to a later version of a Zookeeper release, one would update a few lines in the deployment manifest.
 
 ---
 [Back to Table of Contents](index.html#intro)
