--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -103,7 +103,7 @@ Available rules:
 * **stemcell** [Array of hashes, optional]
   * **os** [String, required]: Matches stemcell's operating system. Example: `ubuntu-trusty`
 * **deployments** [Array of strings, optional]: Matches based on deployment names.
-* **jobs** [Array of hashes, otional]
+* **jobs** [Array of hashes, optional]
   * **name** [String, required]: Matching job name.
   * **release** [String, required]: Matching release name.
 * **networks** [Array of strings, optional]: Matches based on network names. Available in bosh-release v262+.
