add job templates

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -159,6 +159,7 @@ See [Recent Additions and Updates](recent.html).
     * [Compiled releases](compiled-releases.html)
 * [What is a job?](jobs.html)
     * Creating a job
+        * [Job Templates](job-templates.html)
     * [Errands](errands.html)
     * [Properties: Suggested configurations](props-common.html)
     * [Links: Common types](links-common-types.html)
