--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,12 @@
 title: Recent Additions and Updates
 ---
 
+* [Configs](configs.html)
+* VM Resources on [instance groups](manifest-v2.html#instance-groups)
+* [Job Templates](job-templates.html)
+
+---
+
 * [Package vendoring](package-vendoring.html)
 * [Native DNS Support](dns.html) [alpha]
 
